build_log_2.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:processDebugNavigationResources UP-TO-DATE
> Task :app:compileDebugNavigationResources UP-TO-DATE
> Task :app:checkDebugAarMetadata
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:processDebugGoogleServices UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:parseDebugLocalResources

> Task :app:processDebugMainManifest
C:\Users\ELhoussaine\AndroidStudioProjects\moresqplore\app\src\main\AndroidManifest.xml:83:9-92:20 Warning:
	Element activity#com.example.moresqplore.Place at AndroidManifest.xml:83:9-92:20 duplicated with element declared at AndroidManifest.xml:70:9-79:20

> Task :app:processDebugManifest
> Task :app:mergeDebugShaders
> Task :app:compileDebugShaders NO-SOURCE
> Task :app:generateDebugAssets UP-TO-DATE
> Task :app:mergeDebugAssets
> Task :app:compressDebugAssets
> Task :app:desugarDebugFileDependencies
> Task :app:mergeDebugJniLibFolders
> Task :app:checkDebugDuplicateClasses
> Task :app:mergeDebugNativeLibs NO-SOURCE
> Task :app:processDebugManifestForPackage
> Task :app:mergeExtDexDebug
> Task :app:stripDebugDebugSymbols NO-SOURCE
> Task :app:mergeLibDexDebug
> Task :app:validateSigningDebug
> Task :app:writeDebugAppMetadata
> Task :app:writeDebugSigningConfigVersions
> Task :app:processDebugResources

> Task :app:compileDebugJavaWithJavac
C:\Users\ELhoussaine\AndroidStudioProjects\moresqplore\app\src\main\java\com\example\moresqplore\LoginActivity.java:88: error: cannot find symbol
                .requestIdToken(getString(R.string.default_web_client_id))
                                                  ^
  symbol:   variable default_web_client_id
  location: class string
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
1 error

> Task :app:compileDebugJavaWithJavac FAILED

[Incubating] Problems report is available at: file:///C:/Users/ELhoussaine/AndroidStudioProjects/moresqplore/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  C:\Users\ELhoussaine\AndroidStudioProjects\moresqplore\app\src\main\java\com\example\moresqplore\LoginActivity.java:88: error: cannot find symbol
                  .requestIdToken(getString(R.string.default_web_client_id))
                                                    ^
    symbol:   variable default_web_client_id
    location: class string
  Note: Some input files use or override a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 1m 4s
29 actionable tasks: 18 executed, 11 up-to-date
